--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,13 @@
 .sansFont{
     font-family: 'Open Sans', sans-serif;
 }
+
+.blueBG{
+    background-color: #4942E4;
+}
+
+.blueText{
+    color: #4942E4;
+}
+
+/* #F4F4F4 from gray */
