--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,167 @@
-.serifFont{
+.serifFont {
     font-family: 'Antic Didone', serif;
 }
 
-.sansFont{
+.sansFont {
     font-family: 'Open Sans', sans-serif;
 }
 
-.blueBG{
+.blueBG {
     background-color: #4942E4;
 }
 
-.blueText{
+.blueText {
     color: #4942E4;
 }
 
-/* #F4F4F4 from gray */
+/* NavBar */
+
+#header{
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
+    background-color: white;
+}
+
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+#leftNavItemGroup {
+    display: flex;
+    align-items: center;
+}
+
+#brandName {
+    font-size: 25px;
+}
+
+.navLink {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+}
+
+.navLink:hover {
+    text-decoration: underline;
+    color: #4942E4;
+}
+
+#rightNavItemGroup {
+    display: flex;
+    gap: 1.5rem;
+    margin-right: 1rem;
+}
+
+#contextMenuSwitch {
+    display: none;
+    cursor: pointer;
+    margin-right: 1rem;
+}
+
+#navMobile{
+    display: none;
+}
+
+#rightNavItemGroupMobile {
+    background: #fff;
+    position: absolute;
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
+    -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow:0 5px 5px 0 rgba(0, 0, 0, .1);
+}
+
+.linkBox{
+    padding: 20px;
+    margin-right: 1rem;
+    /* background-color: red; */
+    text-align: right;
+    border-bottom: 1px solid #eee;
+    /* width: 100%; */
+}
+
+/* Home */
+
+#cotainerHome {
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    height: 100vh;
+    gap: 50px;
+    align-items: center;
+}
+
+#heroImage {
+    object-fit: cover;
+    min-width: 456px;
+    height: 456px;
+    border-radius: 50%;
+}
+
+#heroTitle {
+    text-transform: uppercase;
+    font-size: 50px;
+}
+
+#heroDetails {
+    font-size: 24px;
+}
+
+@media (max-width: 1200px) {
+    #rightNavItemGroup {
+        display: none;
+    }
+
+    #contextMenuSwitch {
+        display: block;
+    }
+    #navMobile{
+        display: block;
+    }
+    #cotainerHome{
+        margin-top: 20px;
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 1px;
+    }
+    #heroImage{
+        min-width: 300px;
+        height: 300px;
+    }
+    #heroTitle{
+        text-align: center;
+        font-size: 45px;
+    }
+    #heroDetails{
+        text-align: center;
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 720px){
+    #cotainerHome{
+        margin-top: 50px;
+    }
+    #heroImage{
+        min-width: 150px;
+        height: 150px;
+    }
+    #heroTitle{
+        text-align: center;
+        font-size: 40px;
+    }
+    #heroDetails{
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+/* #F4F4F4 form gray */
