--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,32 @@
     }
 }
 
+/* projects */
+
+.projContainer{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    gap: 10rem;
+}
+.projTitle{
+    text-transform: uppercase;
+    font-size: 40px;
+}
+.projDetail{
+    font-size: 18px;
+}
+.projSS{
+    width: 500px;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
+    -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow:0 5px 5px 0 rgba(0, 0, 0, .1);
+}
+
+/* media */
+
 @media (max-width: 720px){
     #cotainerHome{
         margin-top: 50px;
