--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .serifFont {
     font-family: 'Antic Didone', serif;
 }
@@ -14,9 +23,19 @@
     color: #4942E4;
 }
 
+.title {
+    font-size: 40px;
+    font-family: 'Antic Didone', serif;
+}
+
+.detail {
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+}
+
 /* NavBar */
 
-#header{
+#header {
     position: fixed;
     width: 100vw;
     z-index: 1000;
@@ -64,7 +83,7 @@
     margin-right: 1rem;
 }
 
-#navMobile{
+#navMobile {
     display: none;
 }
 
@@ -76,10 +95,10 @@
     flex-direction: column;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
     -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
-    -moz-box-shadow:0 5px 5px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
 }
 
-.linkBox{
+.linkBox {
     padding: 20px;
     margin-right: 1rem;
     /* background-color: red; */
@@ -115,40 +134,9 @@
     font-size: 24px;
 }
 
-@media (max-width: 1200px) {
-    #rightNavItemGroup {
-        display: none;
-    }
-
-    #contextMenuSwitch {
-        display: block;
-    }
-    #navMobile{
-        display: block;
-    }
-    #cotainerHome{
-        margin-top: 20px;
-        flex-direction: column-reverse;
-        justify-content: center;
-        gap: 1px;
-    }
-    #heroImage{
-        min-width: 300px;
-        height: 300px;
-    }
-    #heroTitle{
-        text-align: center;
-        font-size: 45px;
-    }
-    #heroDetails{
-        text-align: center;
-        font-size: 22px;
-    }
-}
-
 /* projects */
 
-.projContainer{
+.projContainer {
     height: 100vh;
     display: flex;
     align-items: center;
@@ -156,37 +144,144 @@
     margin-right: 20px;
     gap: 10rem;
 }
-.projTitle{
-    text-transform: uppercase;
-    font-size: 40px;
-}
-.projDetail{
-    font-size: 18px;
-}
-.projSS{
+
+.projSS {
     width: 500px;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
     -webkit-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
-    -moz-box-shadow:0 5px 5px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow: 0 5px 5px 0 rgba(0, 0, 0, .1);
+}
+
+/* about */
+
+#aboutContainer{
+    height: 100vh;
+    display: flex;
+    align-items:flex-start;
+    margin-left: 20px;
+    margin-right: 20px;
+    gap: 10rem;
+    padding-top: 5rem;
+}
+
+#skillContainer{
+    min-width: 500px;
+}
+
+#skills{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+#skills div{
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+    background-color: #4942E4;
+    padding: .5rem;
+    border-radius: 1rem;
 }
 
 /* media */
 
-@media (max-width: 720px){
-    #cotainerHome{
-        margin-top: 50px;
+@media (max-width: 1200px) {
+
+    /* nav media */
+    #rightNavItemGroup {
+        display: none;
     }
-    #heroImage{
+
+    #contextMenuSwitch {
+        display: block;
+    }
+
+    #navMobile {
+        display: block;
+    }
+
+    /* hero media */
+    #cotainerHome {
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 1px;
+    }
+
+    #heroImage {
+        min-width: 300px;
+        height: 300px;
+    }
+
+    #heroTitle {
+        text-align: center;
+        font-size: 45px;
+    }
+
+    #heroDetails {
+        text-align: center;
+        font-size: 22px;
+    }
+
+    /* proj media */
+    .projContainer {
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 0;
+    }
+
+    .projContainer:nth-of-type(even) {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    /* about media */
+    #aboutContainer{
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        gap: 0;
+    }
+    #skillContainer{
+        min-width: 300px;
+    }
+
+    /* text media */
+    .title {
+        /* text-align: center; */
+        font-size: 35px;
+    }
+
+    .detail {
+        /* text-align: center; */
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 720px) {
+
+    /* hero */
+    #heroImage {
         min-width: 150px;
         height: 150px;
     }
-    #heroTitle{
+
+    #heroTitle {
         text-align: center;
         font-size: 40px;
     }
-    #heroDetails{
+
+    #heroDetails {
         text-align: center;
         font-size: 20px;
+    }
+
+    /* proj */
+    .projSS {
+        width: 350px;
+    }
+
+    /* text media */
+    .title {
+        font-size: 30px;
     }
 }
 
