--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,10 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 /* NavBar */
 
 #header {
@@ -113,7 +117,7 @@ body {
     margin-left: 20px;
     margin-right: 20px;
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     gap: 50px;
     align-items: center;
 }
@@ -137,7 +141,7 @@ body {
 /* projects */
 
 .projContainer {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     margin-left: 20px;
@@ -154,32 +158,114 @@ body {
 
 /* about */
 
-#aboutContainer{
-    height: 100vh;
+#aboutContainer {
+    min-height: 100vh;
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     margin-left: 20px;
     margin-right: 20px;
     gap: 10rem;
     padding-top: 5rem;
 }
 
-#skillContainer{
+#skillContainer {
     min-width: 500px;
 }
 
-#skills{
+#skills {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
 }
-#skills div{
+
+#skills div {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     background-color: #4942E4;
     padding: .5rem;
     border-radius: 1rem;
+}
+
+/* contact */
+#contactContainer {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    gap: 10rem;
+    padding-top: 7rem;
+    min-width: 0;
+}
+
+#contactForm {
+    height: 550px;
+    width: 350px;
+    background-color: #F4F4F4;
+    padding: 3rem;
+    border-radius: .5rem;
+}
+
+#contactForm input {
+    border: 0px;
+    width: 100%;
+    height: 50px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+
+#contactForm textarea {
+    border: 0px;
+    height: 200px;
+    width: 100%;
+    resize: none;
+    margin-top: 1rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+
+#contactForm button {
+    font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
+    background-color: #4942E4;
+    border: 0px;
+    color: white;
+    padding: .5rem;
+    width: 100%;
+    margin-top: 2rem;
+    border-radius: .5rem;
+}
+
+#contactForm button:hover {
+    background-color: #495ff4;
+}
+
+/* footer */
+
+#footer {
+    background-color: #F4F4F4;
+    padding: 5rem;
+    margin-top: 5rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#footer i {
+    font-size: 35px;
+    cursor: pointer;
+    padding: .5rem;
+}
+
+#footer a {
+    text-decoration: none;
+    color: black;
+}
+
+#footer i:hover {
+    background-color: white;
 }
 
 /* media */
@@ -234,14 +320,28 @@ body {
     }
 
     /* about media */
-    #aboutContainer{
+    #aboutContainer {
         flex-direction: column;
         /* justify-content: center; */
         align-items: center;
         gap: 0;
     }
-    #skillContainer{
+
+    #skillContainer {
         min-width: 300px;
+    }
+
+    /* contact media */
+
+    #contactContainer {
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+        justify-content: center;
+    }
+
+    #contactForm {
+        width: 70%;
     }
 
     /* text media */
@@ -279,10 +379,15 @@ body {
         width: 350px;
     }
 
+    /* footer */
+    #footer {
+        flex-direction: column-reverse;
+        gap: 1rem;
+        align-items: center;
+    }
+
     /* text media */
     .title {
         font-size: 30px;
     }
 }
-
-/* #F4F4F4 form gray */
